--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.9",
-    "mongoose-paginate": "^5.0.3"
+    "mongoose-paginate": "^5.0.3",
+    "winston": "^3.2.1",
+    "winston-loggly-bulk": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
